--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,6 @@
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "country-state-city": "^3.1.2",
-    "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
@@ -58,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.59.3"
   }
 }
