--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "@hookform/resolvers": "^3.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.13",
@@ -22,6 +23,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
     "react-js-pagination": "^3.0.3",
     "react-material-ui-carousel": "^3.4.2",
@@ -33,7 +35,8 @@
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "start": "react-scripts start",
