--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/x-data-grid": "^6.1.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.0",
     "@testing-library/jest-dom": "^5.16.5",
