--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.9",
+    "swiper": "^9.2.3",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28",
     "zod": "^3.21.4"
