--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "react-alert-template-basic": "^1.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
