--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,7 +11,7 @@
       "src": "/(.*)",
       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "https://jikmunn-sportsmania.vercel.app/",
+        "Access-Control-Allow-Origin": "https://jikmunn-sportsmania.vercel.app",
         "Access-Control-Allow-Headers": "Content-Type",
         "Access-Control-Allow-Methods": "GET, POST, PUT, PATCH, DELETE, OPTIONS"
       },
